# golem

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  build.bat
doc/: actuator_class_diagram.pu  command_class_diagram.pu  component_class_diagram.pu  display_class_diagram.pu  sensor_class_diagram.pu  util_class_diagram.pu
src/: CMakeLists.txt  command.c  component.c  component_command_factory.c  component_factory.c  golem.c  golem_test.cpp
src/actuators/: actuator.c  null_actuator.c  null_actuator_test.cpp  null_actuator_transaction.c  null_actuator_transaction_test.cpp
src/actuators/motors/: motor.c  null_motor.c  null_motor_test.cpp
src/actuators/motors/dc_motors/: null_dc_motor.c  null_dc_motor_test.cpp
src/actuators/motors/pulse_motors/: null_pulse_motor.c  null_pulse_motor_test.cpp  pulse_motor.c
src/actuators/solenoids/: null_solenoid.c  null_solenoid_test.cpp  solenoid.c
src/commands/: counting_command_stub.c  error_command.c  error_command_test.cpp  null_command.c  null_command_test.cpp  sleep_command.c  sleep_command_test.cpp
src/displays/: display.c  null_display.c  null_display_test.cpp
src/displays/leds/: led.c  null_led.c  null_led_test.cpp
src/displays/leds/led_array/: null_led_array.c  null_led_array_test.cpp
src/displays/leds/led_arrays/: led_array.c  null_led_array.c  null_led_array_test.cpp
src/displays/seven_segment_display/: null_seven_segment_display.c  null_seven_segment_display_test.cpp
src/displays/seven_segment_displays/: null_seven_segment_display.c  null_seven_segment_display_test.cpp  seven_segment_display.c
src/scripts/: command_script.c  command_script_handle.c  command_script_handle_spy.c  command_script_handle_spy.h  command_script_test.cpp  script.c  script_protected.h  script_runner.c  script_runner_test.cpp  script_spy.c  script_spy.h  script_test.cpp
src/sensors/: null_sensor.c  null_sensor_test.cpp  sensor.c  sensor_factory.c
src/sensors/microswitches/: microswitch.c  microswitch_factory.c  null_microswitch.c  null_microswitch_test.cpp
src/sensors/photosensors/: null_photosensor.c  null_photosensor_test.cpp  photosensor.c  photosensor_factory.c
src/sensors/temperature_sensors/: null_temperature_sensor.c  null_temperature_sensor_test.cpp  temperature_sensor.c
src/util/: active_object_engine.c  active_object_engine_private.h  active_object_engine_protected.h  active_object_engine_task.c  active_object_engine_task.h  active_object_engine_test.cpp  command.c  command_protected.h  component_factory.c  counting_command_stub.c  counting_command_stub_test.cpp  delay_command.c  delay_command_test.cpp  dummy_block_command.c  dummy_delay_command.c  error_command.c  null_command.c  one_shot_timer_manager.c  one_shot_timer_manager.h  one_shot_timer_manager_test.cpp  scheduled_process_manager.c  scheduled_process_manager.h  scheduled_process_manager_test.cpp  simple_active_object_engine.c  simple_active_object_engine.h  simple_active_object_engine_test.cpp  sleep_command.c  sleep_command_stub.c  sleep_command_test.cpp  time_command.c  time_command_spy.c  time_unit_stub.c  time_unit_stub.h  watch_command.c  watch_command_stub.c  watch_command_test.cpp
v1/: active_object_engine.h  active_object_engine_private.h  active_object_engine_task.h  actuator.h  actuator_factory_interface.h  actuator_interface.h  actuator_private.h  actuator_transaction_factory_interface.h  actuator_transaction_interface.h  block_command.h  command.h  command_private.h  command_protected.h  command_script.h  command_script_handle.h  component.h  component_command_factory.h  component_factory.h  component_factory_private.h  component_private.h  counting_command_stub.h  dc_motor_factory_interface.h  dc_motor_interface.h  delay_command.h  display.h  display_factory_interface.h  display_interface.h  display_private.h  error_command.h  golem.h  led.h  led_array.h  led_array_factory_interface.h  led_array_interface.h  led_array_private.h  led_factory_interface.h  led_interface.h  led_private.h  microswitch.h  microswitch_factory.h  (+60 more)
